<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/item_movie_detail"
    android:background="@color/white" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        android:title="@string/go_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="140dp"
        android:layout_height="184dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/language"
        android:layout_width="98dp"
        android:layout_height="18dp"
        android:text="@string/movie_language"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/runtime"
        android:layout_width="98dp"
        android:layout_height="18dp"
        android:text="@string/movie_runtime"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_release_date"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/runtime" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/release_date" />

    <TextView
        android:id="@+id/imdbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_rating"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster" />

    <TextView
        android:id="@+id/plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_plot"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_genre"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plot" />

    <TextView
        android:id="@+id/actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_actors"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre" />

    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_director"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actors" />

    <TextView
        android:id="@+id/writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_writer"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/director" />

    <TextView
        android:id="@+id/awards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_awards"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writer" />

</androidx.constraintlayout.widget.ConstraintLayout>
