<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:padding="@dimen/padding_medium">

    <ImageView
        android:id="@+id/search_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/movie_image"
        android:scaleType="centerCrop"
        android:src="@drawable/movie_image" />

    <TextView
        android:id="@+id/search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:textSize="@dimen/text_size_extra_large"
        android:textStyle="bold"
        android:text="@string/search_title" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_title"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:autofillHints="search"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:hint="@string/search_for_a_movie"
        android:minHeight="48dp"
        android:textSize="@dimen/text_size_large" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_edit_text"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/gray"
        android:text="@string/search_button" />
</RelativeLayout>
