<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/padding_medium"
    android:paddingVertical="@dimen/padding_small"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_medium"
            android:paddingVertical="@dimen/padding_medium">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/weight_small"
                android:paddingHorizontal="@dimen/padding_medium" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title"
                    android:textSize="@dimen/text_size_extra_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:layout_alignStart="@id/title"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/movie_year"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/year"
                    android:layout_alignStart="@id/title"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/type"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
